# Process

./: .qrc  AddProcessWidget.cpp  AddProcessWidget.h  AddProcessWidget.ui  CMakeLists.txt  ColorGenerator.h  ComparisonDialog.cpp  ComparisonDialog.h  ControlPanel.cpp  ControlPanel.h  CpuWidget.cpp  CpuWidget.h  CyberStyle.h  ExplanationBar.cpp  ExplanationBar.h  FCFSStrategy.h  GanttWidget.cpp  GanttWidget.h  List.h  ListSorter.h  MLFQStrategy.h  NodeItem.cpp  NodeItem.h  NodeItem.ui  PriorityStrategy.h  Process.cpp  Process.h  ProcessCard.cpp  ProcessCard.h  README.md  ReadyQueueWidget.cpp  ReadyQueueWidget.h  RoundRobinStrategy.h  SJFStrategy.h  ScheDuler.cpp  ScheDuler.h  SchedulingStrategy.h  StatsPanel.cpp  StatsPanel.h  TitleItem.cpp  (+6 more)
